fixed background image overflow to look close to the design

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ li,
 ul {
   text-decoration: none;
   list-style: none;
+  display: inline-block;
 }
 
 img {
@@ -131,7 +132,6 @@ body {
   border-radius: var(--button-radius);
   box-shadow: var(--boxshadow);
   padding: 1.3rem 4rem;
-  display: inline-block;
   filter: contrast(1);
   position: relative;
   cursor: pointer;
@@ -144,7 +144,6 @@ body {
   background-image: url(../assets/images/ellipse-a.png);
   background-repeat: no-repeat;
   background-position: bottom;
-  background-size: contain;
   width: 100%;
   height: 100vh;
   position: absolute;
